etc/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: ns
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ns
status:
  loadBalancer: {}
