etc/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ns-ingress 
  namespace: ns
spec:
  ingressClassName: nginx
  rules:
    - host: ns.huc.knaw.nl 
      http:
        paths:
          - backend:
              service:
                name: ns
                port:
                  number: 80
            path: /
            pathType: Prefix
